--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <img src="image1.jpg" alt="image1" width="500" height="600">
-        <img src="image2.jpg" alt="image2" width="500" height="600">
+        <img src="./image1.jpg" alt="image1" width="500" height="600">
+        <img src="./image2.jpg" alt="image2" width="500" height="600">
     </body>
 
 </html>
